@@ -1,4 +1,5 @@
 
+	* don't perform DNS lookups for the DHT bootstrap unless DHT is enabled
 	* expose post_dht_stats() to python binding
 	* fix backwards compatibility to downloads without partfiles
 	* improve part-file related error messages
